// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing-plugin-bff setJestConfigForBFF 1`] = `
Object {
  "projects": Array [
    Object {
      "globals": Object {
        "modern_bff_info": Object {
          "appDir": "/packages/review/testing-plugin-bff/tests/fixtures/bff1",
          "modernUserConfig": Object {},
          "plugins": Array [],
          "routes": Array [],
        },
      },
      "moduleNameMapper": Object {},
      "resolver": "/packages/review/testing/src/config/resolver.ts",
      "rootDir": "/packages/review/testing-plugin-bff/tests/fixtures/bff1/api",
      "setupFilesAfterEnv": Array [
        "/packages/review/testing-plugin-bff/src/setup.ts",
      ],
      "testEnvironment": "node",
      "testMatch": Array [
        "**/api/**/*.test.[jt]s",
      ],
      "transform": undefined,
    },
  ],
}
`;

exports[`testing-plugin-bff testTimeout should not set in projects 1`] = `
Object {
  "projects": Array [
    Object {
      "globals": Object {
        "modern_bff_info": Object {
          "appDir": "/packages/review/testing-plugin-bff/tests/fixtures/bff1",
          "modernUserConfig": Object {},
          "plugins": Array [],
          "routes": Array [],
        },
      },
      "moduleNameMapper": Object {},
      "resolver": "/packages/review/testing/src/config/resolver.ts",
      "rootDir": "/packages/review/testing-plugin-bff/tests/fixtures/bff1/api",
      "setupFilesAfterEnv": Array [
        "/packages/review/testing-plugin-bff/src/setup.ts",
      ],
      "testEnvironment": "node",
      "testMatch": Array [
        "**/api/**/*.test.[jt]s",
      ],
      "transform": undefined,
    },
  ],
  "testTimeout": 1000,
}
`;
